# BioFigureBench

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  RELEASE_NOTES.md  annotation_guide.md  benchmark_card.md  pyproject.toml
.github/workflows/: ci.yml
data/: benchmark.jsonl
docs/: expert_review_metrics.json  expert_review_scores.csv  index.html
examples/: human_scoring_template.csv
results/claude-sonnet-5-final/: metrics.json  report.html  responses.jsonl  scores.csv
scripts/: download_figures.py
src/biofigurebench/: __init__.py  cli.py  dataset.py  models.py  prompts.py  reporting.py  scoring.py
src/biofigurebench/adapters/: __init__.py  anthropic_adapter.py  base.py
tests/: test_dataset.py  test_reporting.py  test_scoring.py
