[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biofigurebench"
version = "0.2.0"
description = "BioReasonBench Biological Figure Interpretation pilot, distributed as biofigurebench."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Nelson Ayala"}]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pandas>=2.2.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.60.0"]
dev = ["pytest>=8.2.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.scripts]
biofigurebench = "biofigurebench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/biofigurebench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
